[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = []
name = "quarto-test-widgets"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
quarto_test_widgets = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
geopandas = ">=1.1.2,<2"
ipykernel = ">=7.1.0,<8"
jupyter = ">=1.1.1,<2"
lonboard = ">=0.11.1,<0.12"
matplotlib = ">=3.10.8,<4"
numpy = ">=2.4.1,<3"
pyarrow = ">=22.0.0,<23"
pyyaml = ">=6.0.3,<7"
python = "==3.12"
quarto = ">=1.8.27,<2"
